[metadata]
name = hangman
version = 0.0.1
author = Edwin Żurawik
author_email = ezurawik35@gmail.com
description = hangman commandline game
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EdwinZurawik/hangman
project_urls =
    Bug Tracker = https://github.com/EdwinZurawik/hangman/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
